--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>주사위게임</h1>
     </header>
     <main id="content">
-        <section id="s1">이미지</section>
+        <section id="s1"><img src="images/0.png"></section>
         <section id="s2">
             <form>
                 <legend>주사위 숫자를 맞춰 보세요</legend>
@@ -50,7 +50,7 @@
         </section>
         <section id="s3">
                 <button id="bt1" onclick="showDice()">주사위 선택</button>
-                <button id="bt2" onclick="showOk()">확인</button>
+                <button id="bt2" onclick="showOk()">다시 도전!</button>
 
         </section>
     </main>
