--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- <h1 id="idh1"> 자바스크립트 </h1> -->
 
     <header>
-        <h1>주사위게임</h1>
+        <h1>주사위게임2</h1>
     </header>
     <main id="content">
         <section id="s1"><img src="images/0.png"></section>
